# gosh-build-tools

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  architecture.md  clippy.toml  install.sh  taplo.toml
.ci/: Jenkinsfile.gosh-builder-prepare-rc  Jenkinsfile.gosh-tools-prepare-rc
.ci/azure/: gosh-cli-pipeline.yml
git-registry/: Cargo.toml
git-registry/src/: cache.rs  lib.rs  registry.rs
git-server/: Cargo.toml
git-server/src/: directory.rs  lib.rs  main.rs
gosh/: Cargo.toml
gosh-builder/: Cargo.toml
gosh-builder-cli/: Cargo.toml
gosh-builder-cli/src/: cli.rs  cli_builder.rs  lib.rs  main.rs  tracing_pipe.rs  zstd.rs
gosh-builder-cli/src/builder/: config.rs  mod.rs
gosh-builder-cli/src/docker_builder/: git_context.rs  mod.rs
gosh-builder-cli/src/git_cache/: mod.rs  registry.rs
gosh-builder-cli/src/grpc_server/: git_remote.rs  gosh_get.rs  mod.rs
gosh-builder-cli/src/grpc_server/git_remote_gosh/: git_remote_process_pool.rs  mod.rs
gosh-builder-cli/src/sbom/: gosh_classification.rs  mod.rs
gosh-builder-config/: Cargo.toml
gosh-builder-config/src/: lib.rs
gosh-builder-config/src/config/: mod.rs
gosh-builder-config/src/raw_config/: mod.rs  tests.rs
gosh-builder-grpc-api/: Cargo.toml  build.rs
gosh-builder-grpc-api/proto/: builder.proto  git-remote-gosh.proto  gosh-get.proto
gosh-builder-grpc-api/src/: lib.rs
gosh-builder/src/: cli.rs  lib.rs  tracing_pipe.rs  zstd.rs
gosh-builder/src/docker_builder/: mod.rs
gosh-builder/src/git_cache/: mod.rs  registry.rs
gosh-builder/src/git_server/: mod.rs
gosh-builder/src/grpc_server/: gosh_get.rs  mod.rs
gosh-builder/src/grpc_server/git_remote_gosh/: mod.rs
gosh-builder/src/sbom/: mod.rs
gosh-bulider/: Cargo.toml
gosh-get/: Cargo.toml
gosh-get/src/: cli.rs  main.rs
gosh-sbom/: Cargo.toml
gosh-sbom/src/: gosh_classification.rs  lib.rs
gosh-utils/: Cargo.toml
gosh-utils/src/: lib.rs  tracing.rs
gosh/.cargo/: config.toml
gosh/src/: abi.rs  crypto.rs  env.rs  ever_client.rs  log.rs  main.rs  profile.rs
gosh/src/blockchain/: call.rs  const.rs  contract.rs  ever_client.rs  mod.rs
gosh/src/commands/: mod.rs
gosh/src/commands/anytree/: mod.rs
gosh/src/commands/init/: mod.rs
gosh/src/commands/install/: mod.rs
gosh/src/config/: defaults.rs  mod.rs
gosh/src/init/: mod.rs
hack/: Dockerfile  Dockerfile.fail_test  Gosh.fail_test.yaml  Gosh.yaml  check_proxy.sh
images/: Dockerfile
images/git-server/: Dockerfile
images/go/: Dockerfile
images/rust/: Dockerfile
images/ubuntu/: Dockerfile
telepresence-build-gosh/: Cargo.toml
telepresence-build-gosh/src/: main.rs
