[workspace]

members = [
    "git-registry",
    "gosh",
    "gosh-builder",
    "gosh-builder-config",
    "gosh-builder-grpc-api",
    "gosh-get",
    "gosh-utils",
    "telepresence-build-gosh",
]

[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
