[package]
name = "git-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tracing.workspace = true

actix-files = "0.6"
actix-web = "4"
askama_escape = "0.10"
git-registry = { path = "../git-registry" }
gosh-utils = { path = "../gosh-utils" }
percent-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
