[package]
name = "git-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gosh-git-server"

[dependencies]
anyhow.workspace = true
tracing.workspace = true

# askama_escape = "0.10.3"
axum = "0.6.18"
git-registry = { path = "../git-registry" }
gosh-sbom = { path = "../gosh-sbom" }
gosh-utils = { path = "../gosh-utils" }
hyper = "0.14.26"
percent-encoding = "2.3.0"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace", "fs", "compression-zstd"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
