[package]
name = "gosh-builder-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
derive_builder = "0.12.0"
serde = { version = "1.0.156", features = ["derive"] }
serde_with = "2.3.2"
serde_yaml = "0.9.19"
