[package]
name = "gosh-builder-grpc-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4"
prost = "0.11"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9"

[build-dependencies]
prost-build = "0.11"
tonic-build = "0.9"
