[package]
name = "gosh-get"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.2", features = ["derive"] }
gosh-builder-grpc-api = { path = "../gosh-builder-grpc-api/" }
tar = "0.4.38"
tokio = "1.27.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
zstd = "0.12.3"
