[package]
name = "gosh-get"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.2", features = ["derive", "env"] }
gosh-builder-grpc-api = { path = "../gosh-builder-grpc-api/" }
tar = "0.4.38"
tokio = "1.27.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
zstd = "0.12.3"
