[package]
name = "gosh"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
cached = "0.43.0"
clap = "4.2.4"
dialoguer = "0.10.4"
hex = "0.4.3"
serde = { version = "1.0.160", features = ['derive'] }
serde_json = "1.0.96"
shellexpand = "3.1.0"
tokio = { version = "1.28.0", features = ['process'] }
ton_client = { git = 'https://github.com/tonlabs/ever-sdk.git', tag = '1.42.1' }

